--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "autoprefixer": "^10.4.16",
     "cypress": "^13.3.0",
     "eslint": "^8.50.0",
     "nuxt": "^3.7.4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@typescript-eslint/parser": "^6.7.4"
+    "@typescript-eslint/parser": "^6.7.4",
+    "@vee-validate/nuxt": "^4.11.8",
+    "@vee-validate/rules": "^4.11.8",
+    "@vee-validate/yup": "^4.11.8",
+    "vee-validate": "^4.11.8",
+    "yup": "^1.3.2"
   }
 }
