--- a/package.json
+++ b/package.json
@@ -25,10 +25,17 @@
   },
   "dependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@pinia/nuxt": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/parser": "^6.7.4",
     "@vee-validate/nuxt": "^4.11.8",
     "@vee-validate/rules": "^4.11.8",
     "@vee-validate/yup": "^4.11.8",
+    "axios": "^1.6.1",
+    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken-promisified": "^1.0.3",
+    "jwt-decode": "^4.0.0",
+    "pinia": "^2.1.7",
     "vee-validate": "^4.11.8",
     "yup": "^1.3.2"
   }
