--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@pinia/nuxt": "^0.5.1",
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/vue-splide": "^0.6.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/parser": "^6.7.4",
     "@vee-validate/nuxt": "^4.11.8",
@@ -37,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "jsonwebtoken-promisified": "^1.0.3",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vee-validate": "^4.11.8",
     "yup": "^1.3.2"
