--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/types": "^2.17.3",
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/eslint-module": "^4.1.0",
     "autoprefixer": "^10.4.16",
