--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@nuxt/types": "^2.17.3",
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@sidebase/nuxt-auth": "^0.5.0",
+    "@types/bcrypt": "^5.0.2",
     "autoprefixer": "^10.4.16",
     "cypress": "^13.3.0",
     "eslint": "^8.50.0",
@@ -27,6 +30,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@formkit/nuxt": "^1.5.0",
+    "@formkit/themes": "^1.5.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@pinia/nuxt": "^0.5.1",
     "@splidejs/splide": "^4.1.4",
@@ -37,10 +42,12 @@
     "@vee-validate/rules": "^4.11.8",
     "@vee-validate/yup": "^4.11.8",
     "axios": "^1.6.1",
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "jsonwebtoken-promisified": "^1.0.3",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "next-auth": "^4.21.1",
     "pinia": "^2.1.7",
     "vee-validate": "^4.11.8",
     "yup": "^1.3.2"
