--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
-    "esModuleInterop": true,
+    "esModuleInterop": true
   },
 }
