--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.21",
     "next-auth": "^4.21.1",
     "pinia": "^2.1.7",
+    "qrcode": "^1.5.3",
     "vee-validate": "^4.11.8",
     "yup": "^1.3.2"
   }
