--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pinia": "^2.1.7",
     "qrcode": "^1.5.3",
     "vee-validate": "^4.11.8",
+    "vue-credit-card-validation": "^1.0.5",
     "yup": "^1.3.2"
   }
 }
