--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vee-validate/yup": "^4.11.8",
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
+    "flowbite": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "jsonwebtoken-promisified": "^1.0.3",
     "jwt-decode": "^4.0.0",
@@ -53,9 +54,9 @@
     "qrcode": "^1.5.3",
     "semantic-ui-css": "^2.5.0",
     "vee-validate": "^4.11.8",
+    "vue-credit-card-validation": "^1.0.5",
     "vue2-google-maps": "^0.10.7",
     "vue3-google-map": "^0.19.0",
-    "vue-credit-card-validation": "^1.0.5",
     "yup": "^1.3.2"
   }
 }
